# galder-game-jam-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/bucket/whispers-of-avalon/: complete-top-down.aseprite  complete.aseprite  water-animation.aseprite  water-animation.txt
content/game/content/graphics/player/: Rogue.aseprite  Wizard.aseprite
content/game/content/graphics/portal/: portalRings.ase
content/game/content/graphics/shoot/: MageBall.aseprite
content/game/content/maps/: finalmap.json  gamedev.tiled-project  map1.json  map2.json  oldmap.json
design/brainstorming/: README.md
external_libs/: catch.hpp  di.hpp  fakeit.hpp  raygui.hpp  tileson.hpp
external_libs/GameNetworkingSockets/: CMakeLists.txt
external_libs/box2d/: CMakeLists.txt
src/: CMakeLists.txt
src/experiments/: CMakeLists.txt  main.cpp
src/galder-game-jam-2023/: CMakeLists.txt  main.cpp
src/galder-game-jam-2024/: CMakeLists.txt  main.cpp
src/galder-game-jam-library/: CMakeLists.txt  GalderGameJamLibrary.h
src/galder-game-jam-library/data/: PlayerNetworkData.hpp  ServerNetworkData.hpp
src/galder-game-jam-library/enums/: AnimationName.h  ObjectType.h  PlayerState.h  ResourceName.h  TextureName.h
src/galder-game-jam-library/game/: Hitbox.hpp  Player.cpp  Player.h  Player2.cpp  Player2.h
src/galder-game-jam-library/game/collectibles/: Coin.cpp  Coin.h
src/galder-game-jam-library/game/enemies/: Bat.cpp  Bat.h  Ghost.cpp  Ghost.h  Snake.cpp  Spider.cpp  Spider.h  Thing.cpp  Thing.h
src/galder-game-jam-library/game/interactables/: Portal.cpp  Portal.h  PowerUp.cpp  PowerUp.h
src/galder-game-jam-library/game/projectiles/: MageBall.hpp  Projectile.cpp  Projectile.h
src/galder-game-jam-library/graphics/: PhysicsObject.cpp  PhysicsObject.h  Sprite.cpp  Sprite.h
src/galder-game-jam-library/managers/: AnimationManager.cpp  DebugManager.cpp  DebugManager.h  GameManager.cpp  ResourceManager.hpp  TextureManager.cpp  WorldManager.cpp
src/galder-game-jam-library/network/: GalderClient.hpp  GalderServer.hpp
src/galder-game-jam-library/system/: Mapper.hpp  UserData.hpp  World.cpp  World.h  WorldLayer.cpp  WorldLayer.h
src/gamedev-base/: CMakeLists.txt  GameDevBase.h
src/gamedev-base/data/: ClientInfo.hpp  IpAddress.hpp  ServerHostInfo.hpp
src/gamedev-base/enums/: ConnectionStatus.hpp
src/gamedev-base/interfaces/managers/: IDebugManager.h
src/gamedev-base/interfaces/network/: IClient.h  IIpAddressResolver.h  IServer.h
src/gamedev-base/interfaces/system/: IGameObject.h
src/gamedev-base/network/: Client.hpp  IpAddressResolver.cpp  IpAddressResolver.h  Server.hpp  StringTrim.hpp  ipify.cpp  ipify.h
src/ggj-server/: ApplicationState.h  CMakeLists.txt  ClientWindow.hpp  ServerApplication.hpp  ServerWindow.hpp  TestClientData.hpp  TestGalderClient.hpp  TestGalderServer.hpp  TestServeData.hpp  main.cpp  style_cyber_mod.h
